# blog_project

./: .gitignore
api/: pyproject.toml
api/apps/auth/basic_auth/: admin.py  apps.py  url.py
api/apps/category/: admin.py  custom_permission.py  models.py  route.py
api/apps/category/helper/: sr.py
api/apps/category/view/: crud.py
api/apps/comment/: admin.py  custom_permission.py  models.py  route.py
api/apps/comment/helper/: sr.py
api/apps/comment/view/: crud.py
api/apps/post/: admin.py  custom_permisson.py  models.py  route.py
api/apps/post/helper/: sr.py  util.py
api/apps/post/view/: crud.py
api/apps/public/: decorator.py  models.py  util.py
api/apps/tag/: admin.py  models.py  route.py
api/apps/tag/helper/: sr.py
api/apps/tag/migrations/: 0001_initial.py
api/core/: custom_middleware.py  settings.py  urls.py
api/module/category/: admin.py  apps.py  models.py  route.py  tests.py  urls.py
api/module/comment/: admin.py  apps.py  custom_permission.py  models.py  urls.py
api/module/image_content/: admin.py  apps.py  cron.py  models.py  urls.py
api/module/post/: admin.py  apps.py  custom_pagination.py  custom_permisson.py  models.py  route.py  urls.py
api/module/tag/: admin.py  apps.py  custom_permission.py  models.py  route.py  urls.py
api/nginx/: default.conf
api/public/utils/: permission_util.py
api/service/django_cron/: clear_image.py
api/url/: v1.py
api/util/: image_util.py  model_util.py  nest_util.py  pagination_util.py  permission_util.py  response_util.py  test_user_account_util.py  tree_data_processor_util.py
(+132 files in other folders)
