[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ngoclinh <ngoclinh8123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.5"
python-decouple = "^3.7"
gunicorn = "^20.1.0"
django-rest-passwordreset = "^1.3.0"
pillow = "^9.5.0"
django-cron = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
